# ayatana-indicator-power

./: .build.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL.md  MERGE-REVIEW  Makefile.am  Makefile.in  NEWS  NEWS.Canonical  README.md  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  update-po.sh  update-pot.sh
data/: CMakeLists.txt  Makefile.am  Makefile.in  ayatana-indicator-power.conf.in  ayatana-indicator-power.desktop.in  ayatana-indicator-power.service.in  ayatana-indicator-power.upstart.desktop.in  com.canonical.indicator.power  com.canonical.indicator.power.Battery.xml  com.canonical.indicator.power.Testing.xml  com.canonical.indicator.power.gschema.xml  com.canonical.indicator.power.gschema.xml.in  indicator-power.conf.in  indicator-power.desktop.in  indicator-power.service.in  indicator-power.upstart.desktop.in  org.ayatana.indicator.power  org.ayatana.indicator.power.Battery.xml  org.ayatana.indicator.power.Testing.xml  org.ayatana.indicator.power.gschema.xml  org.ayatana.indicator.power.gschema.xml.in  org.ubuntu.indicator-power.gschema.xml  org.ubuntu.indicator-power.gschema.xml.in
data/upstart/: Makefile.am  indicator-power.desktop.in
debian/: ayatana-indicator-power.links  ayatana-indicator-power.maintscript  changelog  control  copyright  copyright.in  postinst  rules  source_ayatana-indicator-power.py  watch
debian/patches/: fix_defines.patch  series
po/: LINGUAS  Makevars  POTFILES.in  aa.po  af.po  am.po  an.po  ar.po  as.po  ast.po  ayatana-indicator-power.pot  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  (+98 more)
src/: CMakeLists.txt  Makefile.am  Makefile.in  brightness.c  brightness.h  com.canonical.powerd.xml  com.lomiri.Repowerd.xml  datafiles.c  datafiles.h  dbus-listener.c  dbus-listener.h  dbus-shared-names.h  dbus-shared.h  device-provider-mock.c  device-provider-mock.h  device-provider-upower.c  device-provider-upower.h  device-provider.c  device-provider.h  device.c  device.h  deviceinfo-flashlight.c  flashlight.c  flashlight.h  ib-brightness-control.c  ib-brightness-control.h  ib-brightness-powerd-control.c  ib-brightness-powerd-control.h  ib-brightness-uscreen-control.c  ib-brightness-uscreen-control.h  indicator-power.c  indicator-power.h  keep-screen-on.c  keep-screen-on.h  main.c  notifier.c  notifier.h  org.ayatana.powerd.xml  power-saver.c  power-saver.h  (+20 more)
tests/: CMakeLists.txt  Makefile.am  Makefile.in  device-provider-mock.c  glib-fixture.h  indicator-power-service-cmdline-battery.cc  manual  test-dbus-listener.cc  test-device.cc  test-indicator.cc  test-notify.cc  test-service.cc
