ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}

SUBDIRS = po

############################################################

# DBus service file
dbus_servicesdir = $(DBUSSERVICEDIR)
dbus_services_DATA = data/indicator-power.service

# Rule to make the service file with libexecdir expanded
%.service: %.service.in
	sed -e "s|\@libexecdir\@|$(libexecdir)|" $< > $@

############################################################

libexec_PROGRAMS = indicator-power-service

###################
# Indicator Stuff
###################

powerlibdir = $(INDICATORDIR)
powerlib_LTLIBRARIES = libpower.la
libpower_la_SOURCES = \
        src/indicator-power.c
libpower_la_CFLAGS = \
        $(INDICATOR_CFLAGS) \
        -Wall -Werror \
        -DG_LOG_DOMAIN=\"Indicator-Power\"
libpower_la_LIBADD = \
        $(INDICATOR_LIBS)
libpower_la_LDFLAGS = \
        -module \
        -avoid-version

################
# Status Stuff
################

indicator_power_service_SOURCES = \
        src/power-service.c
indicator_power_service_CFLAGS = \
        $(POWERSERVICE_CFLAGS) \
        -Wall -Werror \
        -DLOCALEDIR=\"$(localedir)\" \
        -DG_LOG_DOMAIN=\"Power-Me\"
indicator_power_service_LDADD = \
        $(POWERSERVICE_LIBS)

############################################################

EXTRA_DIST = autogen.sh

DISTCHECK_CONFIGURE_FLAGS = --enable-localinstall

############################################################

dist-hook:
	@if test -d "$(top_srcdir)/.bzr"; \
		then \
			echo Creating ChangeLog && \
				( cd "$(top_srcdir)" && \
				echo '# Generated by Makefile. Do not edit.'; echo; \
				$(top_srcdir)/missing --run bzr log --gnu-changelog ) > ChangeLog.tmp \
				&& mv -f ChangeLog.tmp $(top_distdir)/ChangeLog \
				|| (rm -f ChangeLog.tmp; \
					echo Failed to generate ChangeLog >&2 ); \
        else \
			echo Failed to generate ChangeLog: not a branch >&2; \
	fi
	@if test -d "$(top_srcdir)/.bzr"; \
		then \
			echo Creating AUTHORS && \
				( cd "$(top_srcdir)" && \
				echo '# Generated by Makefile. Do not edit.'; echo; \
				$(top_srcdir)/missing --run  bzr log --long --levels=0 | grep -e "^\s*author:" -e "^\s*committer:" | cut -d ":" -f 2 | cut -d "<" -f 1 | sort -u) > AUTHORS.tmp \
				&& mv -f AUTHORS.tmp $(top_distdir)/AUTHORS \
				|| (rm -f AUTHORS.tmp; \
					echo Failed to generate AUTHORS >&2 ); \
        else \
			echo Failed to generate AUTHORS: not a branch >&2; \
	fi
